--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,21 @@
                 </dependency>
 
         </dependencies>
+        <distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>DataPandas Releases Nexus Repository</name>
+	      <url>http://35.179.115.86:8081/repository/barclays-app-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>DataPandas Snapshot Nexus Repository </name>
+	      <url>http://35.179.115.86:8081/repository/barclays-app-snapshot/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>
 
         <!-- Committing and updating changes through Maven, by using below mvn command.
                 For Commiting mvn -Dmessage="Updated using maven" scm:checkin For updating
