--- a/.github/workflows/maven-cicd.yml
+++ b/.github/workflows/maven-cicd.yml
@@ -39,3 +39,10 @@ jobs:
     # SonarQube analysis with remote server authentication
     - name: SonarQube Scan
       run: mvn sonar:sonar -Dsonar.host.url=http://3.8.211.24:9000 -Dsonar.login=${{ secrets.SONAR_USERNAME }} -Dsonar.password=${{ secrets.SONAR_PASSWORD }}
+    
+    
+    - name: Upload to Nexus
+      run: mvn deploy
+      env:
+        MAVEN_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
