--- a/.github/workflows/maven-cicd.yml
+++ b/.github/workflows/maven-cicd.yml
@@ -40,7 +40,20 @@ jobs:
     - name: SonarQube Scan
       run: mvn sonar:sonar -Dsonar.host.url=http://3.8.211.24:9000 -Dsonar.login=${{ secrets.SONAR_USERNAME }} -Dsonar.password=${{ secrets.SONAR_PASSWORD }}
     
-    
+    - name: Configure Maven settings for nexus
+      run: |
+        mkdir -p ~/.m2
+        echo "<settings>\
+        <servers>\
+            <server>\
+                <id>nexus</id>\
+                <username>${{ secrets.NEXUS_USERNAME }}</username>\
+                <password>${{ secrets.NEXUS_PASSWORD }}</password>\
+            </server>\
+        </servers>\
+        </settings>" > ~/.m2/settings.xml    
+
+        
     - name: Upload to Nexus
       run: mvn deploy
       env:
