--- a/.github/workflows/maven-cicd.yml
+++ b/.github/workflows/maven-cicd.yml
@@ -74,7 +74,7 @@ jobs:
 
     - name: Deploy to Tomcat
       run: |
-        curl -T target/maven-standalone-application-1.0.jar "http://${{ secrets.TOMCAT_HOSTNAME }}/manager/text/deploy?path=/maven-app&update=true"
+        curl -T target/maven-standalone-application-0.0.1-SNAPSHOT.jar "http://${{ secrets.TOMCAT_HOSTNAME }}/manager/text/deploy?path=/maven-app&update=true"
       env:
         TOMCAT_USERNAME: ${{ secrets.TOMCAT_USERNAME }}
         TOMCAT_PASSWORD: ${{ secrets.TOMCAT_PASSWORD }}
