--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
                 </archive>
               </configuration>
             </plugin>
+		  <!-- use specific plugin version for sonarqube analysis -->
+			 <plugin>
+                                <groupId>org.sonarsource.scanner.maven</groupId>
+                                <artifactId>sonar-maven-plugin</artifactId>
+                                <version>3.9.1.2184</version>
+
+                        </plugin>  
           </plugins>
         </build>
 
