--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
                 <sonar.host.url>http://35.154.242.68:9000/</sonar.host.url>
                 <sonar.login>admin</sonar.login>
                 <sonar.password>admin</sonar.password>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                <maven.compiler.source>11</maven.compiler.source>
-                <maven.compiler.target>11</maven.compiler.target>
+               <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
         </properties>
 
         <dependencies>
@@ -69,15 +69,15 @@
         -->
         <build>
           <plugins>
-		  <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
-			</plugin>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-compiler-plugin</artifactId>
+		    <version>3.11.0</version> <!-- latest as of now -->
+		    <configuration>
+		        <source>${maven.compiler.source}</source>
+		        <target>${maven.compiler.target}</target>
+		    </configuration>
+		</plugin>
             <plugin>
               <!-- Build an executable JAR -->
               <groupId>org.apache.maven.plugins</groupId>
